<resources>
    <string name="app_name">Android Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="e">e</string>
    <string name="pi">π</string>

    <string name="plus">+</string>
    <string name="minus">–</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="power">^</string>
    <string name="natural_log">ln</string>
    <string name="all_clear">AC</string>
    <string name="open_parenthesis">(</string>
    <string name="close_parenthesis">)</string>
    <string name="negate">+/-</string>
    <string name="equal">=</string>
    <string name="decimal_point">.</string>

    <string name="sine">sin</string>
    <string name="cosine">cos</string>
    <string name="tangent">tan</string>
    <string name="arcsine">arcsin</string>
    <string name="arccosine">arccos</string>
    <string name="arctangent">arctan</string>
    <string name="cosecant">csc</string>
    <string name="secant">sec</string>
    <string name="cotangent">cot</string>

    <string name="alternative">2nd</string>

    <string name="display">[Enter the Formula]</string>
    <string name="calculation">Calculation</string>
    <string name="history">History</string>
</resources>