<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        tools:context=".MainActivity"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/keyboard"
    >
        <EditText
                android:text="@string/display"
                android:inputType="text"
                android:textColor="@color/white"
                android:backgroundTint="@color/yellow_orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:autofillHints="false"
                android:layout_marginVertical="20dp"
                android:textSize="40dp"
                android:defaultFocusHighlightEnabled="false"
                android:textColorHighlight="#00FFFFFF"
                android:textCursorDrawable="@drawable/cursor_color"
                android:drawableRight="@drawable/baseline_backspace_24"
                android:drawablePadding="10dp"
                android:theme="@style/CursorHandle.Style"
                android:id="@+id/formulaInput"
        />
    </LinearLayout>


    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_bias="0.93"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            android:id="@+id/keyboard">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <android.widget.Button
                    android:text="@string/open_parenthesis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/open_parenthesis"/>
            <android.widget.Button
                    android:text="@string/close_parenthesis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/close_parenthesis"/>
            <android.widget.Button
                    android:text="@string/all_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/all_clear"/>
            <android.widget.ToggleButton
                    android:textOff="@string/alternative"
                    android:textOn="@string/alternative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/alternative"/>

        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            <android.widget.Button
                    android:text="@string/sine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/sin"/>
            <android.widget.Button
                    android:text="@string/cosine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/cos"/>
            <android.widget.Button
                    android:text="@string/tangent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/tan"/>
            <android.widget.Button
                    android:text="@string/power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/power"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_horizontal">
            <android.widget.Button
                    android:text="@string/cosecant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/csc"/>
            <android.widget.Button
                    android:text="@string/secant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/sec"/>
            <android.widget.Button
                    android:text="@string/cotangent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/cot"/>
            <android.widget.Button
                    android:text="@string/division"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/division"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_horizontal">
            <android.widget.Button
                    android:text="@string/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/one"/>
            <android.widget.Button
                    android:text="@string/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/two"/>
            <android.widget.Button
                    android:text="@string/three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/three"/>
            <android.widget.Button
                    android:text="@string/multiplication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/multiply"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_horizontal">
            <android.widget.Button
                    android:text="@string/four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/four"/>
            <android.widget.Button
                    android:text="@string/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/five"/>
            <android.widget.Button
                    android:text="@string/six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/six"/>
            <android.widget.Button
                    android:text="@string/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/subtraction"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_horizontal">
            <android.widget.Button
                    android:text="@string/seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/seven"/>
            <android.widget.Button
                    android:text="@string/eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/eight"/>
            <android.widget.Button
                    android:text="@string/nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/nine"/>
            <android.widget.Button
                    android:text="@string/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/plus"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_horizontal">
            <android.widget.Button
                    android:text="@string/negate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/negate"/>
            <android.widget.Button
                    android:text="@string/zero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/zero"/>
            <android.widget.Button
                    android:text="@string/decimal_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/decimal_point"/>
            <android.widget.Button
                    android:text="@string/equal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    style="@style/Button.Style"
                    android:id="@+id/equal"/>
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>